# token-tank

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SPEC.md  FABLE5_DESIGN_PROMPT.md  FABLE5_PROMPT.txt  IMPLEMENTATION_ROADMAP.md  LICENSE  MANIFEST.in  Makefile  README.md  campbell-qa-final.md  campbell-qa-p2.md  campbell-qa-p4p5.md  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/scripts/: run_backend.sh
backend/tests/: conftest.py  test_adapters.py  test_alerts.py  test_analytics.py  test_api.py  test_config_wizard.py  test_extension.py  test_history.py  test_pollers.py  test_proxy.py  test_quota.py  test_regressions.py
backend/tests/fixtures/: anthropic_response.json  responses.py
backend/token_tank/: __init__.py  __main__.py  alert_engine.py  analytics.py  cli.py  config.py  crypto.py  database.py  main.py  models.py  quota_poller.py  runner.py  schemas.py  seed.py  wizard.py
backend/token_tank/proxy/: __init__.py  billing_poller.py  server.py
backend/token_tank/proxy/adapters/: __init__.py  anthropic.py  base.py  lmstudio.py  minimax.py  ollama.py  openai.py  zai.py
backend/token_tank/routers/: alerts.py  dashboard.py  extension.py  providers.py  quota.py
docs/: architecture.md  provider-pricing.md  provider-setup.md  wireframe.html
docs/design-ref/: BEFORE_STATE.md
extension/: README.md  background.js  content-chatgpt.js  content-claude.js  manifest.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  theme.ts
frontend/src/api/: client.ts
frontend/src/components/: CountdownTimer.tsx  Dashboard.tsx  ErrorBoundary.tsx  FuelGauge.tsx  ProviderCard.tsx  QuotaBar.tsx  Settings.tsx  SystemStatus.tsx  TokenTankLogo.tsx
frontend/src/styles/: fonts.css  global.css  themes.css
frontend/src/types/: index.ts
scripts/: build_dist.sh  run_proxy.sh
