[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-tank"
version = "0.4.0"
description = "Multi-provider AI usage monitor — local-first fuel-gauge dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "apscheduler>=3.11",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "aiosqlite>=0.20",
]

[project.scripts]
token-tank = "token_tank.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]
