[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-tank"
version = "0.4.0"
description = "Multi-provider AI usage monitor — local-first fuel-gauge dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Oshi Naka", email = "repetitionrevenue@gmail.com" },
]
keywords = [
    "ai",
    "llm",
    "usage",
    "monitoring",
    "tokens",
    "cost-tracking",
    "anthropic",
    "openai",
    "proxy",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "aiohttp>=3.10",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "apscheduler>=3.11",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/FoxhoundLab/token-tank"
Repository = "https://github.com/FoxhoundLab/token-tank"
Issues = "https://github.com/FoxhoundLab/token-tank/issues"
Changelog = "https://github.com/FoxhoundLab/token-tank/blob/main/CHANGELOG.md"

[project.scripts]
token-tank = "token_tank.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
# Bundle the built dashboard (copied into token_tank/webui by the build step)
# so `pip install token-tank` serves the UI without a source checkout.
token_tank = ["webui/**/*"]
